--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -204,7 +204,7 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 #hero {
   width: 100%;
-  height: 130vh;
+  height: 100vh;
   background: url("../img/Raj1.JPG") top center; 
   background-size: cover;
 }
@@ -221,7 +221,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #hero .hero-container {
-  position: relative;
+  position: absolute;
+  bottom: 70px;
+  right: 20px;
   z-index: 2;
   min-width: 300px;
 }
