--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -205,7 +205,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/Raj1.JPG") top center; 
+  background: url("../img/RajPareek.jpg") top center; 
   background-size: cover;
 }
 
